fix column gap on mozilla

--- a/frontend/src/app/components/ser-detail/ser-detail.component.scss
+++ b/frontend/src/app/components/ser-detail/ser-detail.component.scss
@@ -48,8 +48,11 @@
 
   &__content {
     column-count: 2;
+    -webkit-column-count: 2;
     column-fill: auto;
+    -webkit-column-fill: auto;
     column-gap: 1.4cm;
+    -webkit-column-gap: 1.4cm;
   }
 
   &__paragraph-title {
